--- a/app/src/main/res/layout/activity_room_settings.xml
+++ b/app/src/main/res/layout/activity_room_settings.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateRoomActivity">
-
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/roomSettingsLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineVerticalLeft"
         android:layout_width="0dp"
@@ -174,5 +177,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalFooterBottom"/>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
