--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,32 +11,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="@string/newContributionLabel"
-        app:layout_constraintBottom_toTopOf="@id/editTextNewCommentDialog"
+        android:text="@string/addSubjectLabel"
+        app:layout_constraintBottom_toTopOf="@id/subjectMultiAutoComplete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextNewCommentDialog"
+    <AutoCompleteTextView
+        android:id="@+id/subjectMultiAutoComplete"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.7"
         android:layout_height="wrap_content"
-        android:hint="@string/contentLabel"
-        app:layout_constraintBottom_toBottomOf="@id/submitBtnAddContribution"
-        app:layout_constraintEnd_toStartOf="@id/submitBtnAddContribution"
+        android:hint="@string/subjectLabel"
+        app:layout_constraintBottom_toBottomOf="@id/submitBtnNewCommentDialog"
+        app:layout_constraintEnd_toStartOf="@id/submitBtnNewCommentDialog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDialogHeader"
+        android:completionThreshold="1"
         android:layout_marginStart="10dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/submitBtnAddContribution"
+        android:id="@+id/submitBtnNewCommentDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/lightGreen"
         android:src="@drawable/ic_baseline_send_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/editTextNewCommentDialog"
-        app:layout_constraintTop_toTopOf="@id/editTextNewCommentDialog"
-        app:layout_constraintBottom_toBottomOf="@id/editTextNewCommentDialog"
+        app:layout_constraintStart_toEndOf="@id/subjectMultiAutoComplete"
+        app:layout_constraintTop_toTopOf="@id/subjectMultiAutoComplete"
+        app:layout_constraintBottom_toBottomOf="@id/subjectMultiAutoComplete"
         android:layout_margin="10dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
