--- a/app/src/main/res/layout/item_contribution_edit.xml
+++ b/app/src/main/res/layout/item_contribution_edit.xml
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/deleteContributionBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -78,26 +78,26 @@
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/subjectContributionBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@color/buttonGrey"
             android:tint="@color/darkGreen"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+            app:layout_constraintEnd_toStartOf="@+id/editContributionBtn"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_post_add_24" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/editContributionBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@color/buttonGrey"
             android:tint="@color/darkGreen"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            app:layout_constraintEnd_toStartOf="@+id/deleteContributionBtn"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_edit_24" />
 
