--- a/app/src/main/res/layout/dialog_request_mod_rights.xml
+++ b/app/src/main/res/layout/dialog_request_mod_rights.xml
@@ -10,8 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/typeModeratorPasswordLabel"
         app:layout_constraintBottom_toTopOf="@id/editTextModeratorPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +39,7 @@
         android:src="@drawable/ic_baseline_send_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/editTextModeratorPassword"
-        app:layout_constraintTop_toTopOf="@id/textViewDialogHeader"
+        app:layout_constraintTop_toBottomOf="@id/textViewDialogHeader"
         app:layout_constraintBottom_toBottomOf="@id/editTextModeratorPassword"
         android:layout_margin="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
