--- a/app/src/main/res/layout/dialog_enter_room_password.xml
+++ b/app/src/main/res/layout/dialog_enter_room_password.xml
@@ -27,7 +27,8 @@
             app:layout_constraintEnd_toStartOf="@id/submitBtPasswordDialog"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewDialogHeader"
-            app:layout_constraintWidth_percent="0.7" />
+            app:layout_constraintWidth_percent="0.7"
+            android:inputType="textPassword"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/submitBtPasswordDialog"
