--- a/app/src/main/res/layout/dialog_request_mod_rights.xml
+++ b/app/src/main/res/layout/dialog_request_mod_rights.xml
@@ -29,7 +29,8 @@
         app:layout_constraintEnd_toStartOf="@id/submitBtnReqModIdDialog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDialogHeader"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintWidth_percent="0.7"
+        android:inputType="textPassword"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/submitBtnReqModIdDialog"
